--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+body{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.conatinerInput{
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.btnPay{
+  width: 90%;
+  padding: 15px;
+  margin-top: 20px;
+  margin-left: 18px;
+  border-radius: 6px;
+    color: #fff!important;
+
+    border: 1px solid #50b232;
+    background: #7cd063;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 15px;
+  margin: 5px;
+  font-weight: bold;
+  color: #50b232;
+}
+
+
+.imagens{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  padding: 18px;
 }
